--- a/testing.ipynb
+++ b/testing.ipynb
@@ -118,15 +118,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "HCLTECH.NS ['2020-02-28', '2020-03-20', '2020-06-19', '2020-06-26']\n",
-            " Profit / Loss  ::  161.62238311767578\n",
+            "INFY.NS ['2018-05-18']\n",
+            " Profit / Loss  ::  90.5196533203125\n",
+            " ------------------- \n",
+            "\n",
+            "HCLTECH.NS ['2018-02-16', '2018-04-06']\n",
+            " Profit / Loss  ::  60.86164855957031\n",
             " ------------------- \n",
             "\n"
           ]
@@ -137,27 +141,27 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2020-01-01 -> 2020-07-31)')\n"
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2018-01-01 -> 2018-07-31)')\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "ASIANPAINT.NS ['2020-02-28', '2020-05-08', '2020-05-15']\n",
-            " Profit / Loss  ::  135.71244303385424\n",
+            "ASIANPAINT.NS ['2018-04-13', '2018-04-20', '2018-04-27']\n",
+            " Profit / Loss  ::  294.21126302083326\n",
             " ------------------- \n",
             "\n",
-            "SBIN.NS ['2020-03-06']\n",
-            " Profit / Loss  ::  -16.31732177734375\n",
+            "SBIN.NS ['2018-02-09', '2018-03-09']\n",
+            " Profit / Loss  ::  21.604904174804688\n",
             " ------------------- \n",
             "\n",
-            "ITC.NS ['2020-03-06', '2020-03-13']\n",
-            " Profit / Loss  ::  32.481414794921875\n",
+            "ITC.NS ['2018-03-23', '2018-03-28']\n",
+            " Profit / Loss  ::  42.13988494873047\n",
             " ------------------- \n",
             "\n",
-            "MARUTI.NS ['2020-01-31', '2020-02-28', '2020-03-20']\n",
-            " Profit / Loss  ::  184.99641927083303\n",
+            "MARUTI.NS ['2018-02-23', '2018-03-16', '2018-03-23', '2018-04-27', '2018-05-04', '2018-06-22']\n",
+            " Profit / Loss  ::  1054.183919270834\n",
             " ------------------- \n",
             "\n"
           ]
@@ -168,47 +172,55 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1577817000, endDate = 1596133800\")\n"
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1532975400\")\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TCS.NS ['2020-02-28', '2020-04-09']\n",
-            " Profit / Loss  ::  415.1727294921875\n",
+            "TITAN.NS ['2018-02-02', '2018-02-09', '2018-05-11']\n",
+            " Profit / Loss  ::  79.83241780598962\n",
             " ------------------- \n",
             "\n",
-            "TITAN.NS ['2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  74.59857177734375\n",
+            "SUNPHARMA.NS ['2018-05-18']\n",
+            " Profit / Loss  ::  107.98049926757812\n",
             " ------------------- \n",
             "\n",
-            "SUNPHARMA.NS ['2020-02-20']\n",
-            " Profit / Loss  ::  100.77490234375\n",
+            "BHARTIARTL.NS ['2018-01-25', '2018-03-16', '2018-04-06', '2018-05-11', '2018-05-18', '2018-07-13', '2018-07-20']\n",
+            " Profit / Loss  ::  -2.634608677455333\n",
             " ------------------- \n",
             "\n",
-            "BAJFINANCE.NS ['2020-03-06', '2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  -264.9378255208335\n",
+            "BAJFINANCE.NS ['2018-03-01', '2018-04-27']\n",
+            " Profit / Loss  ::  961.362060546875\n",
             " ------------------- \n",
             "\n",
-            "HDFCBANK.NS ['2020-02-20', '2020-02-28', '2020-03-06', '2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  40.957275390625\n",
+            "HDFCBANK.NS ['2018-01-12', '2018-02-23', '2018-03-16', '2018-06-15']\n",
+            " Profit / Loss  ::  146.63104248046875\n",
             " ------------------- \n",
             "\n",
-            "ICICIBANK.NS ['2020-03-06', '2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  -33.587249755859375\n",
+            "RELIANCE.NS ['2018-02-09', '2018-03-16']\n",
+            " Profit / Loss  ::  231.53091430664062\n",
             " ------------------- \n",
             "\n",
-            "LT.NS ['2020-02-28', '2020-03-06', '2020-03-13', '2020-03-20', '2020-07-17', '2020-07-24']\n",
-            " Profit / Loss  ::  -79.25701904296875\n",
+            "ICICIBANK.NS ['2018-02-09', '2018-03-09', '2018-03-16', '2018-03-23', '2018-03-28']\n",
+            " Profit / Loss  ::  16.176373291015636\n",
             " ------------------- \n",
             "\n",
-            "AXISBANK.NS ['2020-03-06', '2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  -72.39914957682288\n",
+            "LT.NS ['2018-03-16', '2018-03-23', '2018-05-18', '2018-06-15', '2018-06-22']\n",
+            " Profit / Loss  ::  25.043994140625045\n",
             " ------------------- \n",
             "\n",
-            "KOTAKBANK.NS ['2020-03-20', '2020-05-15']\n",
-            " Profit / Loss  ::  169.24969482421875\n",
+            "AXISBANK.NS ['2018-02-23', '2018-03-01', '2018-07-06']\n",
+            " Profit / Loss  ::  44.11619059244788\n",
+            " ------------------- \n",
+            "\n",
+            "KOTAKBANK.NS ['2018-07-27']\n",
+            " Profit / Loss  ::  -5.835693359375\n",
+            " ------------------- \n",
+            "\n",
+            "HINDUNILVR.NS ['2018-01-19', '2018-03-01', '2018-05-11']\n",
+            " Profit / Loss  ::  333.80126953125\n",
             " ------------------- \n",
             "\n"
           ]
@@ -216,7 +228,7 @@
       ],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.iloc[0:20, :]\n",
+        "nse_df = nse_df.iloc[500:550, :]\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "\n",
         "loss = 0\n",
@@ -259,16 +271,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "48"
+              "15"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -279,16 +291,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.6428571428571429"
+              "0.8823529411764706"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -300,16 +312,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "12"
+              "2"
             ]
           },
-          "execution_count": 104,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -320,16 +332,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.9665167509186384"
+              "0.997592615297453"
             ]
           },
-          "execution_count": 106,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -343,16 +355,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "1938.449869632721"
+              "3509.996035257976"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -363,16 +375,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "-67.15413856506348"
+              "-8.470302036830333"
             ]
           },
-          "execution_count": 108,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
