--- a/testing.ipynb
+++ b/testing.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -118,19 +118,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['CSBBANK.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['VIJAYA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "INFY.NS ['2018-05-18']\n",
-            " Profit / Loss  ::  90.5196533203125\n",
+            "GREENLAM.NS ['2018-07-06', '2018-10-05', '2018-10-12']\n",
+            " Profit / Loss  ::  -1.3915201822916572\n",
             " ------------------- \n",
             "\n",
-            "HCLTECH.NS ['2018-02-16', '2018-04-06']\n",
-            " Profit / Loss  ::  60.86164855957031\n",
+            "ENGINERSIN.NS ['2018-02-02', '2018-03-09', '2018-03-16', '2018-03-23', '2018-04-20', '2018-05-18', '2018-05-25', '2018-06-01', '2018-07-20', '2018-08-17', '2018-11-22']\n",
+            " Profit / Loss  ::  -10.772235523570671\n",
+            " ------------------- \n",
+            "\n",
+            "BHARATRAS.NS ['2018-09-14', '2018-09-21']\n",
+            " Profit / Loss  ::  -575.41162109375\n",
             " ------------------- \n",
             "\n"
           ]
@@ -141,27 +157,15 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2018-01-01 -> 2018-07-31)')\n"
+            "['RAJRATAN.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "ASIANPAINT.NS ['2018-04-13', '2018-04-20', '2018-04-27']\n",
-            " Profit / Loss  ::  294.21126302083326\n",
-            " ------------------- \n",
-            "\n",
-            "SBIN.NS ['2018-02-09', '2018-03-09']\n",
-            " Profit / Loss  ::  21.604904174804688\n",
-            " ------------------- \n",
-            "\n",
-            "ITC.NS ['2018-03-23', '2018-03-28']\n",
-            " Profit / Loss  ::  42.13988494873047\n",
-            " ------------------- \n",
-            "\n",
-            "MARUTI.NS ['2018-02-23', '2018-03-16', '2018-03-23', '2018-04-27', '2018-05-04', '2018-06-22']\n",
-            " Profit / Loss  ::  1054.183919270834\n",
+            "INFIBEAM.NS ['2018-03-01', '2018-05-04', '2018-05-11', '2018-09-28']\n",
+            " Profit / Loss  ::  -12.638345718383789\n",
             " ------------------- \n",
             "\n"
           ]
@@ -172,55 +176,196 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1532975400\")\n"
+            "['CMSINFO.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TITAN.NS ['2018-02-02', '2018-02-09', '2018-05-11']\n",
-            " Profit / Loss  ::  79.83241780598962\n",
+            "LAOPALA.NS ['2018-04-27', '2018-05-04', '2018-06-08', '2018-06-29', '2018-09-14', '2018-09-21', '2018-09-28', '2018-10-05']\n",
+            " Profit / Loss  ::  -5.453224182128906\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['TATACOFFEE.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2018-01-01 -> 2018-12-31)')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "TEAMLEASE.NS ['2018-08-31']\n",
+            " Profit / Loss  ::  418.64990234375\n",
             " ------------------- \n",
             "\n",
-            "SUNPHARMA.NS ['2018-05-18']\n",
-            " Profit / Loss  ::  107.98049926757812\n",
+            "SOBHA.NS ['2018-03-16', '2018-04-27', '2018-06-29', '2018-09-28']\n",
+            " Profit / Loss  ::  11.475196838378906\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['SPANDANA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "KTKBANK.NS ['2018-02-09', '2018-03-28', '2018-05-11', '2018-06-22', '2018-06-29', '2018-09-07']\n",
+            " Profit / Loss  ::  0.8728434244791714\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['SANSERA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SUNTECK.NS ['2018-06-01', '2018-10-05']\n",
+            " Profit / Loss  ::  -5.853118896484375\n",
             " ------------------- \n",
             "\n",
-            "BHARTIARTL.NS ['2018-01-25', '2018-03-16', '2018-04-06', '2018-05-11', '2018-05-18', '2018-07-13', '2018-07-20']\n",
-            " Profit / Loss  ::  -2.634608677455333\n",
+            "VMART.NS ['2018-10-05', '2018-10-12']\n",
+            " Profit / Loss  ::  721.400146484375\n",
             " ------------------- \n",
             "\n",
-            "BAJFINANCE.NS ['2018-03-01', '2018-04-27']\n",
-            " Profit / Loss  ::  961.362060546875\n",
+            "JUBLPHARMA.NS ['2018-04-13', '2018-04-20', '2018-10-26']\n",
+            " Profit / Loss  ::  61.416229248046875\n",
             " ------------------- \n",
             "\n",
-            "HDFCBANK.NS ['2018-01-12', '2018-02-23', '2018-03-16', '2018-06-15']\n",
-            " Profit / Loss  ::  146.63104248046875\n",
+            "AVANTIFEED.NS ['2018-01-19']\n",
+            " Profit / Loss  ::  24.91064453125\n",
             " ------------------- \n",
             "\n",
-            "RELIANCE.NS ['2018-02-09', '2018-03-16']\n",
-            " Profit / Loss  ::  231.53091430664062\n",
+            "VARROC.NS ['2018-09-28', '2018-10-05', '2018-11-22', '2018-11-30', '2018-12-07']\n",
+            " Profit / Loss  ::  -69.70009765625002\n",
             " ------------------- \n",
             "\n",
-            "ICICIBANK.NS ['2018-02-09', '2018-03-09', '2018-03-16', '2018-03-23', '2018-03-28']\n",
-            " Profit / Loss  ::  16.176373291015636\n",
+            "IBULHSGFIN.NS ['2018-02-09', '2018-03-16', '2018-06-22', '2018-06-29', '2018-09-07', '2018-09-28', '2018-10-19', '2018-11-22']\n",
+            " Profit / Loss  ::  -127.00061416625977\n",
             " ------------------- \n",
             "\n",
-            "LT.NS ['2018-03-16', '2018-03-23', '2018-05-18', '2018-06-15', '2018-06-22']\n",
-            " Profit / Loss  ::  25.043994140625045\n",
+            "ELECON.NS ['2018-05-04', '2018-06-29']\n",
+            " Profit / Loss  ::  2.7246437072753906\n",
             " ------------------- \n",
             "\n",
-            "AXISBANK.NS ['2018-02-23', '2018-03-01', '2018-07-06']\n",
-            " Profit / Loss  ::  44.11619059244788\n",
+            "ANANTRAJ.NS ['2018-02-02', '2018-03-01', '2018-03-09', '2018-07-06']\n",
+            " Profit / Loss  ::  -0.2227489948272705\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['FUSION.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MASFIN.NS ['2018-02-09', '2018-03-09', '2018-05-18', '2018-06-15', '2018-07-27', '2018-08-24', '2018-09-14']\n",
+            " Profit / Loss  ::  9.163338797433084\n",
             " ------------------- \n",
             "\n",
-            "KOTAKBANK.NS ['2018-07-27']\n",
-            " Profit / Loss  ::  -5.835693359375\n",
+            "PRIVISCL.NS ['2018-03-09', '2018-03-16', '2018-06-29', '2018-08-17', '2018-09-28', '2018-11-02', '2018-11-09']\n",
+            " Profit / Loss  ::  -2.2845567975725203\n",
             " ------------------- \n",
             "\n",
-            "HINDUNILVR.NS ['2018-01-19', '2018-03-01', '2018-05-11']\n",
-            " Profit / Loss  ::  333.80126953125\n",
+            "SCI.NS ['2018-01-25', '2018-08-24', '2018-08-31', '2018-11-30']\n",
+            " Profit / Loss  ::  -11.030957221984863\n",
+            " ------------------- \n",
+            "\n",
+            "ICRA.NS ['2018-03-23', '2018-07-20', '2018-11-30', '2018-12-07', '2018-12-14']\n",
+            " Profit / Loss  ::  -40.60361328125009\n",
+            " ------------------- \n",
+            "\n",
+            "PDSL.NS ['2018-02-02', '2018-02-09', '2018-02-16', '2018-03-23', '2018-03-28', '2018-05-04', '2018-06-29', '2018-09-21']\n",
+            " Profit / Loss  ::  1.7508907318115234\n",
+            " ------------------- \n",
+            "\n",
+            "SHARDACROP.NS ['2018-01-19', '2018-01-25', '2018-02-16', '2018-05-04', '2018-06-08', '2018-09-28', '2018-11-22']\n",
+            " Profit / Loss  ::  -55.724591936383945\n",
+            " ------------------- \n",
+            "\n",
+            "CAPLIPOINT.NS ['2018-04-20', '2018-04-27', '2018-05-04', '2018-05-11', '2018-05-18', '2018-06-29', '2018-07-06', '2018-09-28', '2018-10-26', '2018-11-30']\n",
+            " Profit / Loss  ::  -87.48728942871094\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['PARADEEP.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "GUJALKALI.NS ['2018-03-01', '2018-06-15']\n",
+            " Profit / Loss  ::  -30.647857666015625\n",
+            " ------------------- \n",
+            "\n",
+            "JKTYRE.NS ['2018-06-15', '2018-06-22', '2018-08-24', '2018-09-14', '2018-09-21', '2018-11-30', '2018-12-07']\n",
+            " Profit / Loss  ::  -3.2752576555524513\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['RBA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['MFL.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "STARCEMENT.NS ['2018-06-15', '2018-08-03', '2018-08-10', '2018-11-09']\n",
+            " Profit / Loss  ::  -5.437320709228516\n",
+            " ------------------- \n",
+            "\n",
+            "JAMNAAUTO.NS ['2018-01-25', '2018-02-02', '2018-10-19', '2018-10-26', '2018-12-07']\n",
+            " Profit / Loss  ::  -2.535984802246091\n",
             " ------------------- \n",
             "\n"
           ]
@@ -228,59 +373,65 @@
       ],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.iloc[500:550, :]\n",
+        "nse_df = nse_df.iloc[0:100, :]\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "\n",
-        "loss = 0\n",
-        "loss_amt = 0\n",
         "\n",
-        "profit = 0\n",
-        "profit_amt = 0\n",
+        "def generate_res(nse_df['Symbol'], year):\n",
+        "    loss = 0\n",
+        "    loss_amt = 0\n",
         "\n",
-        "\n",
-        "for stock_id in list(set(nse_df['Symbol'])):\n",
-        "    try:\n",
-        "        df, dates = get_recom(stock_id, '2018-01-01', '2018-12-31')\n",
-        "        if len(dates) >= 1:\n",
-        "            \n",
-        "            print(stock_id, dates)\n",
-        "\n",
-        "            after_price = df[df['Date'] > dates[-1]]['price'].max()\n",
-        "            #print(cprice)\n",
-        "            invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
-        "\n",
-        "            print( ' Profit / Loss  :: ' , (after_price - invest_price))\n",
-        "            if (after_price - invest_price) >= 0:\n",
-        "                profit = profit + 1\n",
-        "                profit_amt = profit_amt + (after_price - invest_price)\n",
-        "\n",
-        "            else:\n",
-        "                loss = loss + 1\n",
-        "                loss_amt = loss_amt + (after_price - invest_price)\n",
+        "    profit = 0\n",
+        "    profit_amt = 0\n",
+        "    year = year\n",
         "\n",
         "\n",
+        "    for stock_id in list(set(nse_df['Symbol'])):\n",
+        "        try:\n",
+        "            df, dates = get_recom(stock_id, str(year) + '-01-01', str(year) + '-12-31')\n",
+        "            if len(dates) >= 1:\n",
         "\n",
-        "            print( ' ------------------- \\n')\n",
+        "                print(stock_id, dates)\n",
+        "\n",
+        "                after_price = df[df['Date'] > dates[-1]]['price'].max()\n",
+        "                #print(cprice)\n",
+        "                invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
+        "\n",
+        "                print( ' Profit / Loss  :: ' , (after_price - invest_price))\n",
+        "                if (after_price - invest_price) >= 0:\n",
+        "                    profit = profit + 1\n",
+        "                    profit_amt = profit_amt + (after_price - invest_price)\n",
+        "\n",
+        "                else:\n",
+        "                    loss = loss + 1\n",
+        "                    loss_amt = loss_amt + (after_price - invest_price)\n",
         "\n",
         "\n",
-        "            \n",
-        "    except:\n",
-        "        continue\n",
+        "\n",
+        "                print( ' ------------------- \\n')\n",
+        "\n",
+        "\n",
+        "\n",
+        "        except:\n",
+        "            continue\n",
+        "\n",
+        "    \n",
+        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "15"
+              "9"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -291,16 +442,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.8823529411764706"
+              "0.3333333333333333"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -312,16 +463,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "2"
+              "18"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -332,16 +483,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.997592615297453"
+              "0.5445451301338854"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
