--- a/testing.ipynb
+++ b/testing.ipynb
@@ -377,7 +377,7 @@
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "\n",
         "\n",
-        "def generate_res(nse_df['Symbol'], year):\n",
+        "def generate_res(stocks, year):\n",
         "    loss = 0\n",
         "    loss_amt = 0\n",
         "\n",
@@ -386,7 +386,7 @@
         "    year = year\n",
         "\n",
         "\n",
-        "    for stock_id in list(set(nse_df['Symbol'])):\n",
+        "    for stock_id in list(set(stocks)):\n",
         "        try:\n",
         "            df, dates = get_recom(stock_id, str(year) + '-01-01', str(year) + '-12-31')\n",
         "            if len(dates) >= 1:\n",
@@ -414,6 +414,8 @@
         "\n",
         "        except:\n",
         "            continue\n",
+        "\n",
+        "\n",
         "\n",
         "    \n",
         "\n",
