--- a/testing.ipynb
+++ b/testing.ipynb
@@ -416,6 +416,10 @@
         "            continue\n",
         "\n",
         "\n",
+        "    print('---####' + str(year) +  '######----' )\n",
+        "\n",
+        "    print(profit)\n",
+        "    print(loss)\n",
         "\n",
         "    \n",
         "\n",
