--- a/testing.ipynb
+++ b/testing.ipynb
@@ -118,259 +118,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['CSBBANK.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
-            "\n",
-            "1 Failed download:\n",
-            "['VIJAYA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "GREENLAM.NS ['2018-07-06', '2018-10-05', '2018-10-12']\n",
-            " Profit / Loss  ::  -1.3915201822916572\n",
-            " ------------------- \n",
-            "\n",
-            "ENGINERSIN.NS ['2018-02-02', '2018-03-09', '2018-03-16', '2018-03-23', '2018-04-20', '2018-05-18', '2018-05-25', '2018-06-01', '2018-07-20', '2018-08-17', '2018-11-22']\n",
-            " Profit / Loss  ::  -10.772235523570671\n",
-            " ------------------- \n",
-            "\n",
-            "BHARATRAS.NS ['2018-09-14', '2018-09-21']\n",
-            " Profit / Loss  ::  -575.41162109375\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['RAJRATAN.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "INFIBEAM.NS ['2018-03-01', '2018-05-04', '2018-05-11', '2018-09-28']\n",
-            " Profit / Loss  ::  -12.638345718383789\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['CMSINFO.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "LAOPALA.NS ['2018-04-27', '2018-05-04', '2018-06-08', '2018-06-29', '2018-09-14', '2018-09-21', '2018-09-28', '2018-10-05']\n",
-            " Profit / Loss  ::  -5.453224182128906\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['TATACOFFEE.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2018-01-01 -> 2018-12-31)')\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "TEAMLEASE.NS ['2018-08-31']\n",
-            " Profit / Loss  ::  418.64990234375\n",
-            " ------------------- \n",
-            "\n",
-            "SOBHA.NS ['2018-03-16', '2018-04-27', '2018-06-29', '2018-09-28']\n",
-            " Profit / Loss  ::  11.475196838378906\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['SPANDANA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "KTKBANK.NS ['2018-02-09', '2018-03-28', '2018-05-11', '2018-06-22', '2018-06-29', '2018-09-07']\n",
-            " Profit / Loss  ::  0.8728434244791714\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['SANSERA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SUNTECK.NS ['2018-06-01', '2018-10-05']\n",
-            " Profit / Loss  ::  -5.853118896484375\n",
-            " ------------------- \n",
-            "\n",
-            "VMART.NS ['2018-10-05', '2018-10-12']\n",
-            " Profit / Loss  ::  721.400146484375\n",
-            " ------------------- \n",
-            "\n",
-            "JUBLPHARMA.NS ['2018-04-13', '2018-04-20', '2018-10-26']\n",
-            " Profit / Loss  ::  61.416229248046875\n",
-            " ------------------- \n",
-            "\n",
-            "AVANTIFEED.NS ['2018-01-19']\n",
-            " Profit / Loss  ::  24.91064453125\n",
-            " ------------------- \n",
-            "\n",
-            "VARROC.NS ['2018-09-28', '2018-10-05', '2018-11-22', '2018-11-30', '2018-12-07']\n",
-            " Profit / Loss  ::  -69.70009765625002\n",
-            " ------------------- \n",
-            "\n",
-            "IBULHSGFIN.NS ['2018-02-09', '2018-03-16', '2018-06-22', '2018-06-29', '2018-09-07', '2018-09-28', '2018-10-19', '2018-11-22']\n",
-            " Profit / Loss  ::  -127.00061416625977\n",
-            " ------------------- \n",
-            "\n",
-            "ELECON.NS ['2018-05-04', '2018-06-29']\n",
-            " Profit / Loss  ::  2.7246437072753906\n",
-            " ------------------- \n",
-            "\n",
-            "ANANTRAJ.NS ['2018-02-02', '2018-03-01', '2018-03-09', '2018-07-06']\n",
-            " Profit / Loss  ::  -0.2227489948272705\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['FUSION.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "MASFIN.NS ['2018-02-09', '2018-03-09', '2018-05-18', '2018-06-15', '2018-07-27', '2018-08-24', '2018-09-14']\n",
-            " Profit / Loss  ::  9.163338797433084\n",
-            " ------------------- \n",
-            "\n",
-            "PRIVISCL.NS ['2018-03-09', '2018-03-16', '2018-06-29', '2018-08-17', '2018-09-28', '2018-11-02', '2018-11-09']\n",
-            " Profit / Loss  ::  -2.2845567975725203\n",
-            " ------------------- \n",
-            "\n",
-            "SCI.NS ['2018-01-25', '2018-08-24', '2018-08-31', '2018-11-30']\n",
-            " Profit / Loss  ::  -11.030957221984863\n",
-            " ------------------- \n",
-            "\n",
-            "ICRA.NS ['2018-03-23', '2018-07-20', '2018-11-30', '2018-12-07', '2018-12-14']\n",
-            " Profit / Loss  ::  -40.60361328125009\n",
-            " ------------------- \n",
-            "\n",
-            "PDSL.NS ['2018-02-02', '2018-02-09', '2018-02-16', '2018-03-23', '2018-03-28', '2018-05-04', '2018-06-29', '2018-09-21']\n",
-            " Profit / Loss  ::  1.7508907318115234\n",
-            " ------------------- \n",
-            "\n",
-            "SHARDACROP.NS ['2018-01-19', '2018-01-25', '2018-02-16', '2018-05-04', '2018-06-08', '2018-09-28', '2018-11-22']\n",
-            " Profit / Loss  ::  -55.724591936383945\n",
-            " ------------------- \n",
-            "\n",
-            "CAPLIPOINT.NS ['2018-04-20', '2018-04-27', '2018-05-04', '2018-05-11', '2018-05-18', '2018-06-29', '2018-07-06', '2018-09-28', '2018-10-26', '2018-11-30']\n",
-            " Profit / Loss  ::  -87.48728942871094\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['PARADEEP.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "GUJALKALI.NS ['2018-03-01', '2018-06-15']\n",
-            " Profit / Loss  ::  -30.647857666015625\n",
-            " ------------------- \n",
-            "\n",
-            "JKTYRE.NS ['2018-06-15', '2018-06-22', '2018-08-24', '2018-09-14', '2018-09-21', '2018-11-30', '2018-12-07']\n",
-            " Profit / Loss  ::  -3.2752576555524513\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "1 Failed download:\n",
-            "['RBA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
-            "\n",
-            "1 Failed download:\n",
-            "['MFL.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "STARCEMENT.NS ['2018-06-15', '2018-08-03', '2018-08-10', '2018-11-09']\n",
-            " Profit / Loss  ::  -5.437320709228516\n",
-            " ------------------- \n",
-            "\n",
-            "JAMNAAUTO.NS ['2018-01-25', '2018-02-02', '2018-10-19', '2018-10-26', '2018-12-07']\n",
-            " Profit / Loss  ::  -2.535984802246091\n",
-            " ------------------- \n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
         "nse_df = nse_df.iloc[0:100, :]\n",
@@ -416,10 +166,14 @@
         "            continue\n",
         "\n",
         "\n",
-        "    print('---####' + str(year) +  '######----' )\n",
+        "    print('---####----' + str(year) +  '----######----' )\n",
         "\n",
-        "    print(profit)\n",
-        "    print(loss)\n",
+        "    print(profit_amt)\n",
+        "    print(loss_amt)\n",
+        "    print(profit / ( profit + loss))\n",
+        "    print('growth money: ' , profit_amt / (profit_amt - loss_amt))\n",
+        "    \n",
+        "    \n",
         "\n",
         "    \n",
         "\n",
